[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Tower.gd" type="Script" id=1]
[ext_resource path="res://assets/tower.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 26.0192

[sub_resource type="CircleShape2D" id=2]
radius = 5.09902

[sub_resource type="CircleShape2D" id=3]
radius = 17.0

[node name="Tower" type="Node2D" groups=["Tower"]]
modulate = Color( 1, 1, 1, 0.196078 )
position = Vector2( 0, 1 )
script = ExtResource( 1 )
projectile_range = 50

[node name="Range" type="Area2D" parent="." groups=["Tower"]]
position = Vector2( -0.25, -0.25 )
collision_layer = 4096
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 1 )

[node name="Tower" type="Sprite" parent="."]
position = Vector2( -1.25, -0.25 )
scale = Vector2( 0.421875, 0.421875 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Collision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 3 )

[node name="ProgressBar" type="ProgressBar" parent="."]
self_modulate = Color( 0.662745, 0, 1, 1 )
margin_left = -11.0
margin_top = 6.0
margin_right = 11.0
margin_bottom = 20.0
size_flags_horizontal = 0
max_value = 20.0
step = 1.0
value = 20.0
percent_visible = false

[connection signal="body_entered" from="Range" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_HitBox_body_exited"]
