[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Tower.gd" type="Script" id=1]
[ext_resource path="res://assets/buildings/windmill.png" type="Texture" id=2]
[ext_resource path="res://scenes/stats/Stats.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 26.0

[sub_resource type="CircleShape2D" id=2]
radius = 5.09902

[sub_resource type="CircleShape2D" id=3]
radius = 17.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="Tower" type="Node2D" groups=["Tower"]]
position = Vector2( 0, 1 )
script = ExtResource( 1 )

[node name="Stats" parent="." instance=ExtResource( 3 )]

[node name="Range" type="Area2D" parent="."]
position = Vector2( -0.25, -0.25 )
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Collision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="." groups=["Tower"]]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 3 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -16.0
margin_top = 11.0
margin_right = 16.0
margin_bottom = 17.0
size_flags_horizontal = 0
max_value = 20.0
step = 1.0
value = 20.0
percent_visible = false

[node name="AnimationRoot" type="Node2D" parent="."]
position = Vector2( 0, -15 )

[node name="Tower" type="Sprite" parent="AnimationRoot"]
position = Vector2( 0, -6 )
texture = ExtResource( 2 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationRoot"]
root_node = NodePath("../Tower")
anims/RESET = SubResource( 4 )

[node name="MouseArea" type="TextureButton" parent="."]
margin_left = -15.0
margin_top = -30.0
margin_right = 15.0
margin_bottom = 10.0
mouse_filter = 1

[connection signal="stats_updated" from="Stats" to="." method="_on_Stats_stats_updated"]
[connection signal="area_entered" from="Range" to="." method="_on_Range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_Range_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_HitBox_body_exited"]
[connection signal="mouse_entered" from="MouseArea" to="." method="_on_MouseArea_mouse_entered"]
[connection signal="mouse_exited" from="MouseArea" to="." method="_on_MouseArea_mouse_exited"]
[connection signal="pressed" from="MouseArea" to="." method="_on_MouseArea_pressed"]
